--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,9 @@ android {
 }
 
 dependencies {
-    compile 'net.danlew:android.joda:2.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
     compile project(':vksdk_library')
+    compile 'net.danlew:android.joda:2.4.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:support-v4:22.2.0'
 }
