--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':vksdk_library')
-    compile 'net.danlew:android.joda:2.4.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.2.+'
     compile 'com.fasterxml.jackson.core:jackson-core:2.2.+'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.2.+'
+    compile 'com.github.orangegangsters:swipy:1.2.0@aar'
 }
